# Four-In-A-Row

./: .gitignore  CMakeLists.txt  README.md
include/: board.hpp  controller.hpp  funcs.hpp  gamedata.hpp  input.hpp  layer.hpp  network.hpp  opp.hpp
src/: board.cpp  controller.cpp  dataTool.cpp  funcs.cpp  gamedata.cpp  input.cpp  layer.cpp  main.cpp  network.cpp  opp.cpp  trainer.cpp
